<resources>
    <string name="app_name">+Videos</string>
    <string name="title_activity_login">Sign in</string>
    <string name="title_activity_singup">Sign up</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="prompt_check_password">Password</string>
    <string name="prompt_name">Name</string>
    <string name="prompt_bdate">Birthdate</string>
    <string name="action_sign_in">Sign in</string>
    <string name="prompt_log_out">Log Out</string>
    <string name="action_register">Register new account</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="action_sign_up_short">Sign up</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too shor</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="prompt_last_name">Lastname</string>
    <string name="error_invalid_name">This name is invalid</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_activity_serie">SerieActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_main2">Main2Activity</string>

    <string name="Camera">Camera</string>
    <string name="Gallery">Gallery</string>
    <string name="title_activity_season">SeasonActivity</string>

    <string name="title_activity_example">Sign in</string>
    <string name="title_activity_profile">ProfileActivity</string>
    <string name="title_activity_view_pager">ViewPagerActivity</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="title_section1">Section 1</string>
    <string name="title_section2">Section 2</string>
    <string name="title_section3">Section 3</string>

    <string name="Season">Season</string>
    <string name="prompt_comment">comment</string>
    <string name="prompt_summit">Summit</string>
    <string name="title_activity_chapter">ChapterActivity</string>

    <string name="action_example">Example action</string>
    <string name="prompt_ok">OK</string>
    <string name="prompt_cancel">CANCEL</string>
    <string name="prompt_messege_buy">The charge for this chapter will be generated to your wallet</string>
    <string name="prompt_price">Buy : $</string>
    <string name="prompt_messege_buy_error">Does not have enough money to buy.</string>
    <string name="prompt_error_sign">Error: No register</string>
    <string name="prompt_save">SAVE</string>
    <string name="prompt_money">Money:</string>
    <string name="prompt_setting">Settings</string>
    <string name="prompt_delete">Delete</string>
    <string name="title_activity_users">Users</string>

</resources>
